--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -1636,22 +1636,6 @@ select {
   margin-right: 0px;
 }
 
-.-mt-72 {
-  margin-top: -18rem;
-}
-
-.mt-72 {
-  margin-top: 18rem;
-}
-
-.-mt-80 {
-  margin-top: -20rem;
-}
-
-.-mt-60 {
-  margin-top: -15rem;
-}
-
 .block {
   display: block;
 }
@@ -1740,6 +1724,14 @@ select {
   height: 2rem;
 }
 
+.h-0\.5 {
+  height: 0.125rem;
+}
+
+.h-px {
+  height: 1px;
+}
+
 .max-h-80 {
   max-height: 20rem;
 }
@@ -1758,6 +1750,12 @@ select {
 
 .min-h-screen {
   min-height: 100vh;
+}
+
+.min-h-fit {
+  min-height: -webkit-fit-content;
+  min-height: -moz-fit-content;
+  min-height: fit-content;
 }
 
 .w-screen {
@@ -1806,6 +1804,34 @@ select {
 
 .w-6\/12 {
   width: 50%;
+}
+
+.w-px {
+  width: 1px;
+}
+
+.w-1\.5 {
+  width: 0.375rem;
+}
+
+.w-1 {
+  width: 0.25rem;
+}
+
+.w-40 {
+  width: 10rem;
+}
+
+.w-24 {
+  width: 6rem;
+}
+
+.w-28 {
+  width: 7rem;
+}
+
+.w-32 {
+  width: 8rem;
 }
 
 .min-w-0 {
@@ -2372,10 +2398,6 @@ select {
 
 .pt-0 {
   padding-top: 0px;
-}
-
-.pb-16 {
-  padding-bottom: 4rem;
 }
 
 .pr-1 {
