--- a/styles/index.css
+++ b/styles/index.css
@@ -57,6 +57,12 @@
       margin-left: auto;
       margin-right: auto;
     }
+    .position-center {
+    position: fixed;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    }
   }
 
   .carousel .thumb {
