--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -3314,6 +3314,14 @@ select {
     margin-top: 1rem;
   }
 
+  .md\:-mt-5 {
+    margin-top: -1.25rem;
+  }
+
+  .md\:-mt-1 {
+    margin-top: -0.25rem;
+  }
+
   .md\:block {
     display: block;
   }
