--- a/styles/index.css
+++ b/styles/index.css
@@ -10,7 +10,7 @@
       @apply inline-flex text-white bg-indigo-500 border-0 py-1 px-3 focus:outline-none hover:bg-indigo-600 rounded text-lg
     }
     .btn-primary-gray {
-      @apply inline-flex text-gray-500 bg-white border-0 py-1 px-3 focus:outline-none hover:bg-neutral-100 rounded text-lg
+      @apply inline-flex text-gray-500 bg-white border-0 py-1 px-3 focus:outline-none hover:bg-neutral-100 rounded text-lg shadow-lg
     }
 
     .btn-primary-indigo-slim {
